PUBMAN-1520 implemented: Yearbook@PubMan
Former-commit-id: 0d6f2b1c481775c485eff4db2fc51781405476bc

--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -642,6 +642,9 @@
 	
 		<organization.logo>http://www.mpdl.mpg.de/mpdl/sys/css/screen/images/logo.gif</organization.logo>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		
+		<escidoc.pubman.yearbook.context.id>escidoc:241288</escidoc.pubman.yearbook.context.id>
+		<escidoc.pubman.yearbook.content-model.id>escidoc:245286</escidoc.pubman.yearbook.content-model.id>
 	</properties>
 
 	<profiles>
