--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -253,3 +253,7 @@ escidoc.syndication.service.url=${escidoc.syndication.service.url}
 
 escidoc.pubman.yearbook.content-model.id=${escidoc.pubman.yearbook.content-model.id}
 escidoc.pubman.yearbook.context.id=${escidoc.pubman.yearbook.context.id}
+
+escidoc.pubman.logo.url=${escidoc.pubman.logo.url}
+escidoc.pubman.home.content.url=${escidoc.pubman.home.content.url}
+
