Former-commit-id: 4ee837458db00cdd56c8abab5e8218b947857ace

--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -255,5 +255,7 @@ escidoc.pubman.yearbook.content-model.id=${escidoc.pubman.yearbook.content-model
 escidoc.pubman.yearbook.context.id=${escidoc.pubman.yearbook.context.id}
 
 escidoc.pubman.logo.url=${escidoc.pubman.logo.url}
+
+#External html content that can be displayed on the homepage. Different Languages are supported by adding the locale (.de, .en etc.) to the end of the provided file
 escidoc.pubman.home.content.url=${escidoc.pubman.home.content.url}
 
