Former-commit-id: aa6eac1dcf1ce852cc083a4bbd656cc793a9218a

--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -254,6 +254,7 @@ escidoc.syndication.service.url=${escidoc.syndication.service.url}
 escidoc.pubman.yearbook.content-model.id=${escidoc.pubman.yearbook.content-model.id}
 escidoc.pubman.yearbook.context.id=${escidoc.pubman.yearbook.context.id}
 
+#Url or path to an image that is displayed as logo on all Pubman Pages.
 escidoc.pubman.logo.url=${escidoc.pubman.logo.url}
 
 #External html content that can be displayed on the homepage. Different Languages are supported by adding the locale (.de, .en etc.) to the end of the provided file
