--- a/common_services/transformation/src/main/resources/transformation.properties
+++ b/common_services/transformation/src/main/resources/transformation.properties
@@ -10,3 +10,4 @@ escidoc.transformation.edoc.stylesheet.filename=${escidoc.transformation.edoc.st
 escidoc.transformation.endnote.ice.stylesheet.filename=${escidoc.transformation.endnote.ice.stylesheet.filename}
 escidoc.transformation.endnote.stylesheet.filename=${escidoc.transformation.endnote.stylesheet.filename}
 escidoc.transformation.mab.stylesheet.filename=${escidoc.transformation.mab.stylesheet.filename}
+escidoc.transformation.report.sortorder.filename=${escidoc.transformation.report.sortorder.filename}
