--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -260,3 +260,7 @@ escidoc.pubman.logo.url=${escidoc.pubman.logo.url}
 #External html content that can be displayed on the homepage. Different Languages are supported by adding the locale (.de, .en etc.) to the end of the provided file
 escidoc.pubman.home.content.url=${escidoc.pubman.home.content.url}
 
+#Additional survey link in meta menu
+escidoc.pubman.survey.url=${escidoc.pubman.survey.url}
+escidoc.pubman.survey.title=${escidoc.pubman.survey.title}
+escidoc.pubman.survey.tooltip=${escidoc.pubman.survey.tooltip}
