Implementation of survey link
Former-commit-id: 51ff64f4bc1eb5923517c559bf006cc9bac1e40e

--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -655,6 +655,7 @@
 		<escidoc.pubman.survey.url></escidoc.pubman.survey.url>
 		<escidoc.pubman.survey.title></escidoc.pubman.survey.title>
 		<escidoc.pubman.survey.tooltip></escidoc.pubman.survey.tooltip>
+		<escidoc.pubman.survey.styles></escidoc.pubman.survey.styles>
 		
 	</properties>
 
