--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -264,3 +264,4 @@ escidoc.pubman.home.content.url=${escidoc.pubman.home.content.url}
 escidoc.pubman.survey.url=${escidoc.pubman.survey.url}
 escidoc.pubman.survey.title=${escidoc.pubman.survey.title}
 escidoc.pubman.survey.tooltip=${escidoc.pubman.survey.tooltip}
+escidoc.pubman.survey.styles=${escidoc.pubman.survey.styles}
