Implementation of survey link
Former-commit-id: bbff956a24b4f0dadea1fe3833f6e53c30474e83

--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -654,7 +654,7 @@
 		<!-- Additional link in meta menu -->
 		<escidoc.pubman.survey.url></escidoc.pubman.survey.url>
 		<escidoc.pubman.survey.title></escidoc.pubman.survey.title>
-		<escidoc.pubman.survey.tooltip></escidoc.pubman.survey.tooltip>
+		<escidoc.pubman.survey.text></escidoc.pubman.survey.text>
 		<escidoc.pubman.survey.styles></escidoc.pubman.survey.styles>
 		
 	</properties>
