--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -263,5 +263,5 @@ escidoc.pubman.home.content.url=${escidoc.pubman.home.content.url}
 #Additional survey link in meta menu
 escidoc.pubman.survey.url=${escidoc.pubman.survey.url}
 escidoc.pubman.survey.title=${escidoc.pubman.survey.title}
-escidoc.pubman.survey.tooltip=${escidoc.pubman.survey.tooltip}
+escidoc.pubman.survey.text=${escidoc.pubman.survey.text}
 escidoc.pubman.survey.styles=${escidoc.pubman.survey.styles}
