--- a/common_services/cone/src/test/resources/pubman.properties
+++ b/common_services/cone/src/test/resources/pubman.properties
@@ -19,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006-2010 Fachinformationszentrum Karlsruhe Gesellschaft
+# Copyright 2006-2011 Fachinformationszentrum Karlsruhe Gesellschaft
 # für wissenschaftlich-technische Information mbH and Max-Planck-
 # Gesellschaft zur Förderung der Wissenschaft e.V.
 # All rights reserved. Use is subject to license terms.
@@ -103,6 +103,9 @@ escidoc.cone.maximum.results=${escidoc.cone.maximum.results}
 
 # CoNE default language abbreviation
 escidoc.cone.rdf.path=${escidoc.cone.rdf.path}
+
+# CoNE RDFS template
+escidoc.cone.rdfs.template=${escidoc.cone.rdfs.template}
 
 #Path to the model.xml file
 escidoc.cone.modelsxml.path=${escidoc.cone.modelsxml.path}
