--- a/common_services/cone_installer/pom.xml
+++ b/common_services/cone_installer/pom.xml
@@ -29,14 +29,14 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>6.2.0-SNAPSHOT</version>
+		<version>1.0.49-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>cone_installer</artifactId>
 	<name>cone_installer</name>
 	<packaging>jar</packaging>
-	<version>6.2.0-SNAPSHOT</version>
+	<version>0.1.0-SNAPSHOT</version>
 	
 	<scm>
 		<connection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/cone_installer/</connection>
@@ -183,6 +183,19 @@
 			<version>1.2.8-SNAPSHOT</version>
 			<scope>provided</scope>
 			<type>ear</type>
+		</dependency>
+		<dependency>
+			<groupId>de.mpg.escidoc.services</groupId>
+			<artifactId>cone</artifactId>
+			<version>1.2.8-SNAPSHOT</version>
+			<scope>provided</scope>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>de.mpg.escidoc.services</groupId>
+			<artifactId>framework_access</artifactId>
+			<version>1.0.52-SNAPSHOT</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
