--- a/common_services/validation_presentation/pom.xml
+++ b/common_services/validation_presentation/pom.xml
@@ -31,19 +31,19 @@
   <parent>
     <artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.50</version>
+		<version>1.0.51-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.mpg.escidoc.services</groupId>
   <artifactId>validation_presentation</artifactId>
   <name>validation_presentation</name>
-  <version>1.0.57</version>
+  <version>1.0.58-SNAPSHOT</version>
  	<packaging>war</packaging>
 
 	<scm>
-		<connection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.50</connection>
-		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.50</developerConnection>
-		<url>https://zim02.gwdg.de/repos/common/tags/common_services-1.0.50</url>
+		<connection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/validation_presentation</connection>
+		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/validation_presentation</developerConnection>
+		<url>https://zim02.gwdg.de/repos/common/</url>
 	</scm>
 
 	<build>
