--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>de.mpg.escidoc.pubman</groupId>
 	<artifactId>pubman</artifactId>
 	<packaging>pom</packaging>
-	<version>6.2.0-SNAPSHOT</version>
+	<version>6.2.0</version>
 	<name>pubman</name>
 	<url>http://escidoc1.escidoc.mpg.de/projects/pubman</url>
 	<description>
@@ -182,9 +182,9 @@
   </modules>
 
 	<scm>
-		<connection>scm:svn:https://zim02.gwdg.de/repos/pubman/trunk/pubman</connection>
-		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/pubman/trunk/pubman</developerConnection>
-		<url>https://zim02.gwdg.de/repos/pubman/</url>
+		<connection>scm:svn:https://zim02.gwdg.de/repos/pubman/tags/pubman-6.2.0</connection>
+		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/pubman/tags/pubman-6.2.0</developerConnection>
+		<url>https://zim02.gwdg.de/repos/pubman/tags/pubman-6.2.0</url>
 	</scm>
 
 	<distributionManagement>
@@ -649,13 +649,13 @@
 		
 		<!-- Externalisation of home page content -->
 		<escidoc.pubman.logo.url>/pubman/resources/images/pubman_logo.png</escidoc.pubman.logo.url>
-		<escidoc.pubman.home.content.url></escidoc.pubman.home.content.url>
+		<escidoc.pubman.home.content.url />
 		
 		<!-- Additional link in meta menu -->
-		<escidoc.pubman.survey.url></escidoc.pubman.survey.url>
-		<escidoc.pubman.survey.title></escidoc.pubman.survey.title>
-		<escidoc.pubman.survey.text></escidoc.pubman.survey.text>
-		<escidoc.pubman.survey.styles></escidoc.pubman.survey.styles>
+		<escidoc.pubman.survey.url />
+		<escidoc.pubman.survey.title />
+		<escidoc.pubman.survey.text />
+		<escidoc.pubman.survey.styles />
 		
 	</properties>
 
@@ -677,6 +677,14 @@
                                </goals>
                            </execution>
                        </executions>
+						<dependencies>
+							<dependency>
+								<groupId>org.codehaus.plexus</groupId>
+								<artifactId>plexus-utils</artifactId>
+								<version>1.4.1</version>
+								<scope>runtime</scope>
+							</dependency>
+						</dependencies>		                       
                    </plugin>
                </plugins>
            </build> 
