--- a/pubman/pubman_installer/pom.xml
+++ b/pubman/pubman_installer/pom.xml
@@ -127,7 +127,7 @@
 						<configuration>
 							<tasks>
 								<copy todir="${staging.dir}">
-									<fileset dir="${basedir}/src/izpack" />
+									<fileset dir="${basedir}/src/izpack"/>
 								</copy>
 							</tasks>
 						</configuration>
@@ -228,13 +228,13 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>validation_presentation</artifactId>
-			<version>1.0.57</version>
+			<version>1.0.58-SNAPSHOT</version>
 			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>framework_access</artifactId>
-			<version>1.0.53</version>
+			<version>1.0.54-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -257,13 +257,13 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>cone</artifactId>
-			<version>1.2.9</version>
+			<version>1.2.10-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.50</version>
+			<version>1.1.51-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 	
