--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -155,6 +155,9 @@ escidoc.search.and.export.maximum.records=${escidoc.search.and.export.maximum.re
 #Path to the model.xml file
 escidoc.cone.modelsxml.path=${escidoc.cone.modelsxml.path}
 
+# CoNE RDFS template
+escidoc.cone.rdfs.template=${escidoc.cone.rdfs.template}
+
 # Import database configuration
 escidoc.import.database.driver.class=${escidoc.import.database.driver.class}
 escidoc.import.database.server.name=${escidoc.import.database.server.name}
