--- a/common_services/transformation/pom.xml
+++ b/common_services/transformation/pom.xml
@@ -32,18 +32,18 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.52</version>
+		<version>1.0.53-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>transformation</artifactId>
 	<name>transformation</name>
-	<version>1.0.40</version>
+	<version>1.0.41-SNAPSHOT</version>
 	
 	<scm>
-	  <connection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.52</connection>
-    <developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.52</developerConnection>
-    <url>https://zim02.gwdg.de/repos/common/transformation/tags/common_services-1.0.52</url>
+	  <connection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/transformation</connection>
+    <developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/transformation</developerConnection>
+    <url>https://zim02.gwdg.de/repos/common/transformation</url>
   </scm>
 	<build>
 		<plugins>
@@ -115,14 +115,14 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.52</version>
+			<version>1.1.53-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>structuredexportmanager</artifactId>
-			<version>1.0.55</version>
+			<version>1.0.56-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
       	<dependency>
